--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,13 +30,11 @@
         android:id="@+id/btnStock"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="284dp"
         android:layout_marginEnd="104dp"
-        android:text="Button"
+        android:text="@string/btnTitle_Stock"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
