--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,14 +5,36 @@
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
+        <!--<item name="android:textViewStyle">@style/TitleFont</item>-->
+
     </style>
+
+    <!-- Fonts -->
+    <style name="TitleFont">
+        <item name="android:textSize">7mm</item>
+        <item name="android:textColor">@color/app_title_color</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:typeface">serif</item>
+    </style>
+
+    <style name="ListItemFont">
+        <item name="android:textSize">5mm</item>
+        <item name="android:textColor">@color/list_item_color</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">serif</item>
+    </style>
+
+    <!-- -->
 
     <style name="Theme.ShoppingList.NoActionBar">
         <item name="windowActionBar">false</item>
