--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,40 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_width="59dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="176dp"
-        android:text="@string/app_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnMainShoppingLists"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="104dp"
-        android:text="@string/shopping_lists"
-        android:onClick="buttonClicked"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+        <Button
+            android:id="@+id/btnShoppingLists"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/shopping_lists"
+            android:onClick="buttonClicked"/>
 
-    <Button
-        android:id="@+id/btnMainStocks"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="284dp"
-        android:layout_marginEnd="104dp"
-        android:text="@string/stocks"
-        android:onClick="buttonClicked"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+        <Button
+            android:id="@+id/btnStocks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/stocks"
+            android:onClick="buttonClicked"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+    <!-- Contenedor de los Fragmentos Dinámicos -->
+    <FrameLayout
+        android:id="@+id/contenedorFragments"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"/>
+
+</LinearLayout>
