Implementado soporte basico a la creacion de ProductList con DIalogs

--- a/app/src/main/res/layout/fragment_list_of_product_list.xml
+++ b/app/src/main/res/layout/fragment_list_of_product_list.xml
@@ -20,7 +20,7 @@
         tools:listitem="@layout/recycler_view_adapter_list_of_products"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addNewProductsList"
+        android:id="@+id/btnAddNewProductsList"
         android:onClick="buttonClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
