--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".shoppinglists_activities.ShoppingListListActivity">
+    tools:context=".shoppinglists_activities.ShoppingListActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
