Refactor uso de dialogos

--- a/app/src/main/res/layout/dialog_two_buttons.xml
+++ b/app/src/main/res/layout/dialog_two_buttons.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/txt_create_entity_dialog_title"
+        android:id="@+id/txt_dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
@@ -15,7 +15,7 @@
 
     <!-- Se elegirá de forma dinamica el contenido principal del Dialog -->
     <LinearLayout
-        android:id="@+id/create_entity_dialog_content"
+        android:id="@+id/custom_dialog_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"/>
@@ -27,18 +27,16 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnCancel"
+            android:id="@+id/btnNegative"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="@string/cancel"/>
+            android:layout_marginRight="5dp"/>
 
         <Button
-            android:id="@+id/btnCreate"
+            android:id="@+id/btnAffirmative"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="@string/create"/>
+            android:layout_marginRight="5dp"/>
 
     </LinearLayout>
 </LinearLayout>
