--- a/app/src/main/res/layout/content_dialog_create_list_of_products.xml
+++ b/app/src/main/res/layout/content_dialog_create_list_of_products.xml
@@ -12,6 +12,6 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="@string/stock" />
+        android:hint="@string/Name" />
 
 </LinearLayout>
