--- a/app/src/main/res/layout/content_dialog_delete_entity.xml
+++ b/app/src/main/res/layout/content_dialog_delete_entity.xml
@@ -4,14 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/input_name"
-        android:inputType="text"
+    <TextView
+        android:id="@+id/txt_warning_msg"
         android:layout_width="175dp"
         android:layout_height="50dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/name" />
+        android:layout_marginBottom="4dp"/>
 
 </LinearLayout>
