--- a/app/src/main/res/menu/menu_products_list.xml
+++ b/app/src/main/res/menu/menu_products_list.xml
@@ -5,6 +5,12 @@
     tools:context=".MainActivity">
 
     <item
+        android:id="@+id/edit_name"
+        android:orderInCategory="100"
+        android:title="@string/edit_name"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/delete"
         android:orderInCategory="100"
         android:title="@string/delete"
