--- a/app/src/main/res/layout/recycler_view_adapter_product.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_product.xml
@@ -1,29 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:columnCount="4"
     android:orientation="horizontal">
     <!-- TODO: poner vista con los elementos mejor colocados-->
-    <LinearLayout
-        android:background="@android:drawable/btn_default"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txtName"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="1dp"
-            android:textAppearance="@style/ListItemFont"/>
+    <TextView
+        android:id="@+id/txtName"
+        android:textAppearance="@style/ListItemFont"/>
 
-        <TextView
-            android:id="@+id/txtTargetAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp"
-            android:textAppearance="@style/ListItemFont"/>
+    <TextView
+        android:id="@+id/txtTargetAmount"
+        android:textAppearance="@style/ListItemFont"/>
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnDeleteProduct"
+        android:text="@string/delete"/>
 
-</LinearLayout>
+</GridLayout>
