--- a/app/src/main/res/layout/activity_list_of_products.xml
+++ b/app/src/main/res/layout/activity_list_of_products.xml
@@ -21,6 +21,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_list_of_products" />
+    <!-- Contenedor dinamico -->
+    <FrameLayout
+        android:id="@+id/contenedorListOfProducts"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
