Soporte a StockShoppingLists implementado

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,6 +25,14 @@
             android:text="@string/stocks"
             android:onClick="buttonClicked"/>
 
+        <Button
+            android:id="@+id/btnStockShoppingLists"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/stock_shopping_lists"
+            android:onClick="buttonClicked"/>
+
     </LinearLayout>
 
     <!-- Contenedor de los Fragmentos Dinámicos -->
