--- a/app/src/main/res/layout/content_shopping_list.xml
+++ b/app/src/main/res/layout/content_shopping_list.xml
@@ -11,11 +11,24 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnGoShopping"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Go Shopping"/>
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnGoShopping"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Go Shopping"/>
+
+            <Button
+                android:id="@+id/btnGoAssociatedStock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Go Associated Stock"/>
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
