--- a/app/src/main/res/layout/content_stock.xml
+++ b/app/src/main/res/layout/content_stock.xml
@@ -5,19 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:name="com.example.shoppinglist.ListOfProductsFragment"
+    <LinearLayout
+        android:layout_marginTop="@dimen/app_bar_height"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:context=".view_utils.fragments.ListOfProductsFragment"
-        android:id="@+id/recyclerView"
-        tools:listitem="@layout/recycler_view_adapter_list_of_products"/>
+        android:orientation="vertical">
+
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="2"
+            android:orientation="horizontal">
+
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="10"
+                android:gravity="left"
+                android:orientation="horizontal"
+                android:columnCount="2">
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="left"
+                    android:text="@string/product"
+                    android:textAppearance="@style/ListItemFont"/>
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/amount"
+                    android:textAppearance="@style/ListItemFont"/>
+
+            </GridLayout>
+        </GridLayout>
+
+        <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:name="com.example.shoppinglist.ListOfProductsFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layoutManager="LinearLayoutManager"
+            tools:context=".view_utils.fragments.ListOfProductsFragment"
+            android:id="@+id/recyclerView"
+            tools:listitem="@layout/recycler_view_adapter_list_of_products"/>
+
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAddNewProduct"
