--- a/app/src/main/res/layout/recycler_view_adapter_go_shopping.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_go_shopping.xml
@@ -12,7 +12,7 @@
         android:textAppearance="@style/ListItemFont"/>
 
     <TextView
-        android:id="@+id/txtTargetAmount"
+        android:id="@+id/txtCurrentTargetAmount"
         android:textAppearance="@style/ListItemFont"/>
 
     <CheckBox android:id="@+id/checkBox"/>
