--- a/app/src/main/res/layout/recycler_view_adapter_stock_product.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_stock_product.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:columnCount="4"
+    android:columnCount="2"
     android:orientation="horizontal">
-    <!-- TODO: poner vista con los elementos mejor colocados-->
+
+    <!-- TODO: Añadir botones de añadir y eliminar unidad -->
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_columnWeight="10"
+        android:gravity="left"
+        android:orientation="horizontal"
+        android:columnCount="2">
 
         <TextView
             android:id="@+id/txtName"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="left"
             android:textAppearance="@style/ListItemFont"/>
 
         <TextView
-            android:id="@+id/txtTargetAmount"
+            android:id="@+id/txtCurrentTargetAmount"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="@dimen/fab_margin"
             android:textAppearance="@style/ListItemFont"/>
 
-        <TextView
-            android:id="@+id/txtCurrentAmount"
-            android:textAppearance="@style/ListItemFont"/>
+    </GridLayout>
 
-        <Button
-            android:id="@+id/btnDeleteProduct"
-            android:text="@string/delete"/>
+    <Button
+        android:id="@+id/btnDeleteProduct"
+        android:layout_marginLeft="4dp"
+        android:layout_gravity="right"
+        android:text="@string/delete"/>
 
 </GridLayout>
