--- a/app/src/main/res/layout/content_go_shopping.xml
+++ b/app/src/main/res/layout/content_go_shopping.xml
@@ -15,8 +15,41 @@
             android:id="@+id/btnFinishShopping"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:text="Finish Shopping"
             android:onClick="onClick"/>
+
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="2"
+            android:orientation="horizontal">
+
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="10"
+                android:gravity="left"
+                android:orientation="horizontal"
+                android:columnCount="2">
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="left"
+                    android:text="@string/product"
+                    android:textAppearance="@style/ListItemFont"/>
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/amount"
+                    android:textAppearance="@style/ListItemFont"/>
+
+            </GridLayout>
+        </GridLayout>
 
         <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
