--- a/app/src/main/res/layout/recycler_view_adapter_go_shopping.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_go_shopping.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_gravity="center"
+android:columnCount="2"
+android:orientation="horizontal">
+
+<GridLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:columnCount="4"
-    android:orientation="horizontal">
-    <!-- TODO: poner vista con los elementos mejor colocados-->
+    android:layout_columnWeight="10"
+    android:gravity="left"
+    android:orientation="horizontal"
+    android:columnCount="2">
 
     <TextView
         android:id="@+id/txtName"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="left"
         android:textAppearance="@style/ListItemFont"/>
 
     <TextView
         android:id="@+id/txtCurrentTargetAmount"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="@dimen/fab_margin"
         android:textAppearance="@style/ListItemFont"/>
+
+</GridLayout>
 
     <CheckBox android:id="@+id/checkBox"/>
 
