--- a/app/src/main/res/layout/recycler_view_adapter_go_shopping.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_go_shopping.xml
@@ -19,7 +19,7 @@ android:orientation="horizontal">
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="left"
-        android:textAppearance="@style/ListItemFont"/>
+        android:textAppearance="@style/AppFont.ListItemFont"/>
 
     <TextView
         android:id="@+id/txtCurrentTargetAmount"
@@ -27,7 +27,7 @@ android:orientation="horizontal">
         android:layout_width="wrap_content"
         android:layout_gravity="right"
         android:layout_marginRight="@dimen/fab_margin"
-        android:textAppearance="@style/ListItemFont"/>
+        android:textAppearance="@style/AppFont.ListItemFont"/>
 
 </GridLayout>
 
