--- a/app/src/main/res/layout/activity_list_of_products.xml
+++ b/app/src/main/res/layout/activity_list_of_products.xml
@@ -25,7 +25,6 @@
     <FrameLayout
         android:id="@+id/contenedorListOfProducts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"/>
+        android:layout_height="match_parent"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
