--- a/app/src/main/res/layout/content_go_shopping.xml
+++ b/app/src/main/res/layout/content_go_shopping.xml
@@ -11,7 +11,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
+        <android.widget.Button
+            style="@style/AppButton.ActionButton"
             android:id="@+id/btnFinishShopping"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,14 +40,14 @@
                     android:layout_width="wrap_content"
                     android:layout_gravity="left"
                     android:text="@string/product"
-                    android:textAppearance="@style/ListItemFont"/>
+                    android:textAppearance="@style/AppFont.ListItemFont"/>
 
                 <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/amount"
-                    android:textAppearance="@style/ListItemFont"/>
+                    android:textAppearance="@style/AppFont.ListItemFont"/>
 
             </GridLayout>
         </GridLayout>
