--- a/app/src/main/res/layout/content_stock.xml
+++ b/app/src/main/res/layout/content_stock.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/wallpaper_stock">
 
     <LinearLayout
         android:layout_marginTop="@dimen/app_bar_height"
@@ -12,14 +13,16 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="horizontal">
 
-            <Button
+            <android.widget.Button
+                style="@style/AppButton.ActionButton"
                 android:id="@+id/btnGenerateAssociatedStock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="Generate Shopping list"/>
 
         </LinearLayout>
@@ -44,14 +47,14 @@
                     android:layout_width="wrap_content"
                     android:layout_gravity="left"
                     android:text="@string/product"
-                    android:textAppearance="@style/ListItemFont"/>
+                    android:textAppearance="@style/AppFont.ListItemFont"/>
 
                 <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/amount"
-                    android:textAppearance="@style/ListItemFont"/>
+                    android:textAppearance="@style/AppFont.ListItemFont"/>
 
             </GridLayout>
         </GridLayout>
@@ -79,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/start_action_button_color"
         app:srcCompat="@android:drawable/ic_input_add"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
