--- a/app/src/main/res/layout/recycler_view_adapter_list_of_products.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_list_of_products.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal">
 
     <RelativeLayout
+        android:id="@+id/btnItemProductList"
         android:background="@android:drawable/btn_default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -13,7 +14,7 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/ListItemFont"/>
+            android:textAppearance="@style/AppFont.ListItemFont"/>
 
     </RelativeLayout>
 
