--- a/app/src/main/res/layout/recycler_view_adapter_stock_product.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_stock_product.xml
@@ -3,40 +3,67 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:columnCount="2"
+    android:columnCount="3"
     android:orientation="horizontal">
 
-    <!-- TODO: Añadir botones de añadir y eliminar unidad -->
-
     <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="10"
-        android:gravity="left"
+        android:layout_height="match_parent"
+        android:layout_columnWeight="5"
         android:orientation="horizontal"
         android:columnCount="2">
 
         <TextView
             android:id="@+id/txtName"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
             android:layout_gravity="left"
-            android:textAppearance="@style/ListItemFont"/>
+            android:textAppearance="@style/AppFont.ListItemFont"/>
 
         <TextView
             android:id="@+id/txtCurrentTargetAmount"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
             android:layout_gravity="right"
             android:layout_marginRight="@dimen/fab_margin"
-            android:textAppearance="@style/ListItemFont"/>
+            android:textAppearance="@style/AppFont.ListItemFont"/>
 
     </GridLayout>
 
-    <Button
-        android:id="@+id/btnDeleteProduct"
-        android:layout_marginLeft="4dp"
-        android:layout_gravity="right"
-        android:text="@string/delete"/>
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_columnWeight="1"
+        android:orientation="horizontal">
+
+        <android.widget.Button
+            style="@style/AppButton.RemoveUnitButton"
+            android:id="@+id/btnRemoveUnit"
+            android:text="-"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+
+        <android.widget.Button
+            style="@style/AppButton.AddUnitButton"
+            android:id="@+id/btnAddUnit"
+            android:text="+"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_columnWeight="1"
+        android:orientation="horizontal">
+
+        <android.widget.Button
+            style="@style/AppButton.NegativeButton"
+            android:id="@+id/btnDeleteProduct"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_gravity="right"
+            android:text="@string/delete"/>
+
+    </LinearLayout>
+
 
 </GridLayout>
