--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="Theme.ShoppingList" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
 
         <!-- Secondary brand color. -->
@@ -15,26 +15,72 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        <!--<item name="android:textViewStyle">@style/TitleFont</item>-->
+        <item name="android:textAppearance">@style/AppFont</item>
 
     </style>
 
-    <!-- Fonts -->
-    <style name="TitleFont">
+    <!-- BEGIN FONTS -->
+    <style name="AppFont">
+        <item name="android:typeface">serif</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">3mm</item>
+    </style>
+
+    <style name="AppFont.TitleFont" parent="AppFont">
         <item name="android:textSize">7mm</item>
-        <item name="android:textColor">@color/app_title_color</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:typeface">serif</item>
     </style>
 
-    <style name="ListItemFont">
-        <item name="android:textSize">5mm</item>
-        <item name="android:textColor">@color/list_item_color</item>
+    <style name="AppFont.ListItemFont" parent="AppFont">
+        <item name="android:textSize">3mm</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:typeface">serif</item>
+    </style>
+    <!-- END FONTS -->
+
+    <!-- BEGIN BUTTONS STYLES -->
+    <style name="AppButton" parent="@android:style/Widget.Button">
+        <item name="android:textAppearance">@style/AppFont</item>
     </style>
 
-    <!-- -->
+    <style name="AppButton.MainShoppingListButton" parent="AppButton">
+        <item name="android:background">@drawable/main_button_shopping_list</item>
+        <item name="android:textColor" android:state_enabled="false">@color/black</item>
+    </style>
+
+    <style name="AppButton.MainStockButton" parent="AppButton">
+        <item name="android:background">@drawable/main_button_stock</item>
+        <item name="android:textColor" android:state_enabled="false">@color/black</item>
+    </style>
+
+    <style name="AppButton.MainStockShoppingListButton" parent="AppButton">
+        <item name="android:background">@drawable/main_button_stock_shopping_list</item>
+        <item name="android:textColor" android:state_enabled="false">@color/black</item>
+    </style>
+
+    <style name="AppButton.NegativeButton" parent="AppButton">
+        <item name="android:background">@drawable/button_negative</item>
+    </style>
+
+    <style name="AppButton.NeutralButton" parent="AppButton">
+        <item name="android:background">@drawable/button_neutral</item>
+    </style>
+
+    <style name="AppButton.PositiveButton" parent="AppButton">
+        <item name="android:background">@drawable/button_positive</item>
+    </style>
+
+    <style name="AppButton.ActionButton" parent="AppButton">
+        <item name="android:background">@drawable/button_action</item>
+    </style>
+
+    <style name="AppButton.AddUnitButton" parent="AppButton">
+        <item name="android:background">@drawable/button_add_unit</item>
+    </style>
+
+    <style name="AppButton.RemoveUnitButton" parent="AppButton">
+        <item name="android:background">@drawable/button_remove_unit</item>
+    </style>
+    <!-- END BUTTONS STYLES -->
 
     <style name="Theme.ShoppingList.NoActionBar">
         <item name="windowActionBar">false</item>
