--- a/app/src/main/res/drawable/button_add_unit.xml
+++ b/app/src/main/res/drawable/button_add_unit.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false" android:state_enabled="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
+            android:shape="oval">
 
             <corners
                 android:radius="@dimen/button_radius"/>
@@ -22,7 +22,7 @@
 
     <item android:state_pressed="true" android:state_enabled="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
+            android:shape="oval">
 
             <corners
                 android:radius="@dimen/button_radius"/>
