--- a/app/src/main/res/layout/content_shopping_summary.xml
+++ b/app/src/main/res/layout/content_shopping_summary.xml
@@ -5,7 +5,8 @@
     android:layout_marginTop="@dimen/app_bar_height"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/wallpaper_light_grey">
 
     <LinearLayout
         android:layout_width="match_parent"
