--- a/app/src/main/res/layout/recycler_view_adapter_product.xml
+++ b/app/src/main/res/layout/recycler_view_adapter_product.xml
@@ -9,7 +9,7 @@
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="10"
+        android:layout_columnWeight="2"
         android:gravity="left"
         android:orientation="horizontal"
         android:columnCount="2">
@@ -18,24 +18,24 @@
             android:id="@+id/txtName"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_gravity="left"
-            android:textAppearance="@style/AppFont.ListItemFont"/>
+            android:layout_columnWeight="5"
+            android:textAppearance="@style/AppFont.ListItemFont"
+            android:textAlignment="textStart"/>
 
         <TextView
             android:id="@+id/txtCurrentTargetAmount"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="@dimen/fab_margin"
-            android:textAppearance="@style/AppFont.ListItemFont"/>
+            android:layout_columnWeight="1"
+            android:textAppearance="@style/AppFont.ListItemFont"
+            android:textAlignment="textEnd"/>
 
     </GridLayout>
 
     <android.widget.Button
-        style="@style/AppButton.NegativeButton"
+        style="@style/AppButton.RemoveButton"
         android:id="@+id/btnDeleteProduct"
         android:layout_marginLeft="4dp"
-        android:layout_gravity="right"
-        android:text="@string/delete"/>
+        android:layout_gravity="end"/>
 
 </GridLayout>
